src/test/deca/context/valid/assigner_float_int.deca
// Description:
//    assigne particulier
//
// Resultats:
//
//
//
// Historique:
//    cree le 07/01/2025

{   
    float x;
    x=3;
}