src/test/deca/context/invalid/conversion_nonvalide1.deca
// Description:
//    conversion de void
//
// Resultats:
//erreur
//
//
// Historique:
//    cree le 06/01/2025

{   
   
}